Updating website with most current posts

--- a/css/rstudio.css
+++ b/css/rstudio.css
@@ -7,7 +7,7 @@ Default Rstudio-like styling by: Nathaniel Haines <haines-lab.com>
 .hljs {
   display: inline-block;
   overflow: auto;
-  white-space: pre-wrap;
+  white-space: pre;
   padding: 0.0em;
   color: black;
   background: #f4f5f4;
